fix(modal): align modal's box model usage with other blueprints while issue is figured out (#4347)

--- a/ui/components/modals/base/_index.scss
+++ b/ui/components/modals/base/_index.scss
@@ -72,10 +72,10 @@
     border-bottom-style: solid;
     border-bottom-color: var(--sds-c-modal-color-border, $color-border);
     background-color: var(--sds-c-modal-header-color-background, $color-background-alt);
-    padding-top: var(--sds-c-modal-header-sizing-vertical-start, $spacing-medium);
-    padding-right: var(--sds-c-modal-header-sizing-horizontal-end, $spacing-medium);
-    padding-bottom: var(--sds-c-modal-header-sizing-vertical-end, $spacing-medium);
-    padding-left: var(--sds-c-modal-header-sizing-horizontal-start, $spacing-medium);
+    padding-top: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
+    padding-right: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
+    padding-bottom: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
+    padding-left: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
     text-align: center;
 
     + .slds-modal__menu {
@@ -172,10 +172,10 @@
     border-top-style: solid;
     border-top-color: var(--sds-c-modal-color-border, $color-border);
     background-color: var(--sds-c-modal-footer-color-background, $color-background);
-    padding-top: var(--sds-c-modal-footer-sizing-vertical-start, $spacing-small);
-    padding-right: var(--sds-c-modal-footer-sizing-horizontal-end, $spacing-medium);
-    padding-bottom: var(--sds-c-modal-footer-sizing-vertical-end, $spacing-small);
-    padding-left: var(--sds-c-modal-footer-sizing-horizontal-start, $spacing-medium);
+    padding-top: $spacing-small; // @todo re-evaluate styling api exposure for box-model
+    padding-right: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
+    padding-bottom: $spacing-small; // @todo re-evaluate styling api exposure for box-model
+    padding-left: $spacing-medium; // @todo re-evaluate styling api exposure for box-model
     text-align: right;
     box-shadow: var(--sds-c-modal-shadow, $shadow-drop-down);
 
